--- a/index.html
+++ b/index.html
@@ -3,123 +3,198 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Infinite Cats!</title>
+    <title>Infinite Cats</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        /* Custom styles */
-        body {
-            font-family: 'Inter', sans-serif; /* Use Inter font */
-        }
-        /* Simple loading spinner */
-        .loader {
-            border: 4px solid #f3f3f3; /* Light grey */
-            border-top: 4px solid #3498db; /* Blue */
-            border-radius: 50%;
-            width: 40px;
-            height: 40px;
-            animation: spin 1s linear infinite;
-            margin: 20px auto; /* Center the loader */
-        }
-
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
+      @font-face {
+        font-family: 'LucideIcons';
+        src: url(https://cdn.jsdelivr.net/npm/lucide-static@latest/font/Lucide.ttf) format('truetype');
+      }
+      .lucide {
+        font-family: 'LucideIcons';
+        font-style: normal;
+        font-weight: normal;
+        font-variant: normal;
+        text-rendering: auto;
+        line-height: 1;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+      }
+      /* Add a simple loading animation */
+      @keyframes spin {
+        to { transform: rotate(360deg); }
+      }
+      .loading-spinner::before {
+        content: '\e05a'; /* Lucide 'loader-circle' icon */
+        font-family: 'LucideIcons';
+        display: inline-block;
+        animation: spin 1s linear infinite;
+        margin-right: 0.5rem;
+      }
+      /* Basic styling for the grid */
+      #cat-container {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* Responsive grid */
+        gap: 1rem; /* Spacing between images */
+      }
+      /* Style for individual cat images */
+      .cat-image {
+        width: 100%;
+        height: 250px; /* Fixed height for consistency */
+        object-fit: cover; /* Cover the area without distortion */
+        border-radius: 0.5rem; /* Rounded corners */
+        background-color: #e5e7eb; /* Light gray background as placeholder */
+        display: block; /* Ensure it behaves like a block element */
+      }
     </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
-<body class="bg-gradient-to-br from-blue-100 via-purple-100 to-pink-100 min-h-screen">
+<body class="bg-gray-100 font-['Inter',_sans-serif] text-gray-800">
 
-    <div class="container mx-auto px-4 py-8">
-        <h1 class="text-4xl font-bold text-center text-gray-800 mb-8">Infinite Cats! 🐾</h1>
+    <header class="bg-white shadow-md py-4 sticky top-0 z-10">
+        <h1 class="text-3xl font-bold text-center text-gray-900">Infinite Cats! 🐾</h1>
+    </header>
 
-        <div id="cat-container" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
+    <main class="container mx-auto px-4 py-8">
+        <div id="cat-container">
             </div>
 
-        <div id="loader" class="loader hidden"></div>
-         <div id="error-message" class="text-center text-red-600 font-semibold mt-4 hidden">
-            Oops! Could not load more cats. Please try again later.
+        <div id="loading" class="text-center py-8 text-gray-600 text-lg hidden">
+            <span class="loading-spinner">Loading more cats...</span>
         </div>
-    </div>
+
+        <div id="error-message" class="text-center py-4 text-red-600 font-medium hidden">
+            Oops! Couldn't fetch more cats. Please try again later.
+        </div>
+    </main>
+
+    <footer class="text-center py-4 text-gray-500 text-sm mt-8">
+        Powered by <a href="https://thecatapi.com/" target="_blank" rel="noopener noreferrer" class="text-blue-500 hover:underline">The Cat API</a>
+    </footer>
 
     <script>
         const catContainer = document.getElementById('cat-container');
-        const loader = document.getElementById('loader');
+        const loadingIndicator = document.getElementById('loading');
         const errorMessage = document.getElementById('error-message');
-        let isLoading = false; // Flag to prevent multiple simultaneous loads
-        let page = 1; // Keep track of loads (optional, API doesn't use pages here)
-        const limit = 12; // Number of cats to fetch per request
+        let isLoading = false; // Flag to prevent multiple simultaneous requests
+        let page = 1; // Keep track of pagination (though The Cat API doesn't strictly use pages like this)
+        const limit = 15; // Number of cats to fetch per request
 
-        // --- Function to fetch cat images ---
+        // --- Configuration ---
+        // IMPORTANT: For production use, you should get your own API key from https://thecatapi.com/
+        // and keep it secure. For this example, we'll use the public endpoint without a key.
+        const API_URL = `https://api.thecatapi.com/v1/images/search?limit=${limit}&order=RANDOM`;
+        // If you have an API key, add it like this:
+        // const API_KEY = "YOUR_API_KEY";
+        // const API_URL = `https://api.thecatapi.com/v1/images/search?limit=${limit}&page=${page}&order=RANDOM`;
+        // const headers = { 'x-api-key': API_KEY };
+
+        // --- Functions ---
+
+        /**
+         * Fetches cat images from The Cat API.
+         */
         async function fetchCats() {
             if (isLoading) return; // Don't fetch if already loading
+
             isLoading = true;
-            loader.classList.remove('hidden'); // Show loader
-            errorMessage.classList.add('hidden'); // Hide previous errors
+            loadingIndicator.classList.remove('hidden'); // Show loading indicator
+            errorMessage.classList.add('hidden'); // Hide any previous error
 
             try {
-                // Fetch random cat images from the API
-                const response = await fetch(`https://api.thecatapi.com/v1/images/search?limit=${limit}&page=${page}&order=Rand`);
+                // Fetch data from the API
+                // Add { headers: headers } if using an API key
+                const response = await fetch(`${API_URL}&page=${page}`);
 
                 if (!response.ok) {
-                    // Handle HTTP errors
+                    // Handle HTTP errors (e.g., 404, 500)
                     throw new Error(`HTTP error! status: ${response.status}`);
                 }
 
                 const cats = await response.json();
 
-                // --- Append images to the container ---
-                cats.forEach(cat => {
-                    const imgWrapper = document.createElement('div');
-                    imgWrapper.classList.add('bg-white', 'rounded-lg', 'shadow-md', 'overflow-hidden', 'transform', 'hover:scale-105', 'transition-transform', 'duration-300');
-
-                    const img = document.createElement('img');
-                    img.src = cat.url;
-                    img.alt = 'A cute cat';
-                    img.classList.add('w-full', 'h-64', 'object-cover'); // Style the image
-                    // Add a placeholder in case the image fails to load
-                    img.onerror = function() {
-                        this.onerror=null; // prevent infinite loop if placeholder fails
-                        this.src='https://placehold.co/600x400/cccccc/ffffff?text=Cat+Not+Found';
-                        this.alt='Image loading failed';
-                    };
-
-
-                    imgWrapper.appendChild(img);
-                    catContainer.appendChild(imgWrapper);
-                });
-
-                page++; // Increment page counter (though not strictly needed for this random API endpoint)
+                // Process and display the fetched cats
+                displayCats(cats);
+                page++; // Increment page for the next potential fetch (useful if API supports pagination)
 
             } catch (error) {
-                console.error("Failed to fetch cats:", error);
+                console.error("Error fetching cats:", error);
+                errorMessage.textContent = `Oops! Couldn't fetch more cats (${error.message}). Please try scrolling again later.`;
                 errorMessage.classList.remove('hidden'); // Show error message
             } finally {
-                isLoading = false; // Reset loading flag
-                loader.classList.add('hidden'); // Hide loader
+                isLoading = false;
+                loadingIndicator.classList.add('hidden'); // Hide loading indicator
             }
         }
 
-        // --- Infinite Scroll Logic ---
+        /**
+         * Creates and appends cat image elements to the container.
+         * @param {Array} cats - An array of cat objects from the API.
+         */
+        function displayCats(cats) {
+            cats.forEach(cat => {
+                const imgElement = document.createElement('img');
+                imgElement.src = cat.url;
+                imgElement.alt = 'A cute cat';
+                imgElement.classList.add('cat-image', 'shadow-md', 'transition-opacity', 'duration-500', 'opacity-0'); // Start transparent for fade-in
+                imgElement.loading = 'lazy'; // Native lazy loading
+
+                // Placeholder image URL (using placehold.co)
+                const placeholderUrl = `https://placehold.co/300x250/e2e8f0/9ca3af?text=Loading+Cat...`;
+
+                // Set placeholder initially
+                imgElement.src = placeholderUrl;
+
+                // Create a temporary image object to load the actual cat image
+                const actualImage = new Image();
+                actualImage.src = cat.url;
+
+                // When the actual image loads, replace the placeholder
+                actualImage.onload = () => {
+                    imgElement.src = cat.url; // Set the actual source
+                    imgElement.classList.remove('opacity-0'); // Fade in
+                };
+
+                // Handle image loading errors
+                actualImage.onerror = () => {
+                    console.warn(`Failed to load image: ${cat.url}`);
+                    // Keep the placeholder or set a specific error image/style
+                    imgElement.src = `https://placehold.co/300x250/fecaca/991b1b?text=Error+Loading`; // Error placeholder
+                    imgElement.alt = 'Error loading cat image';
+                    imgElement.classList.remove('opacity-0'); // Show the error placeholder
+                };
+
+                catContainer.appendChild(imgElement);
+            });
+        }
+
+        /**
+         * Handles the scroll event to implement infinite scrolling.
+         */
         function handleScroll() {
-            // Check if the user is near the bottom of the page
+            // Check if the user has scrolled close to the bottom
             // window.innerHeight: Height of the viewport
             // window.scrollY: How much the user has scrolled down
             // document.body.offsetHeight: Total height of the page content
-            // 100 (pixels): Offset buffer - load slightly before reaching the absolute bottom
-            if (window.innerHeight + window.scrollY >= document.body.offsetHeight - 100 && !isLoading) {
-                console.log("Reached bottom, loading more cats...");
-                fetchCats();
+            // 100 (px): Threshold - fetch more when user is 100px from the bottom
+            if (window.innerHeight + window.scrollY >= document.body.offsetHeight - 300 && !isLoading) {
+               console.log("Reached bottom, fetching more cats...");
+               fetchCats();
             }
         }
 
         // --- Event Listeners ---
+
+        // Add scroll event listener
         window.addEventListener('scroll', handleScroll);
 
         // --- Initial Load ---
-        // Load the first batch of cats when the page loads
+
+        // Fetch the first batch of cats when the page loads
         window.onload = fetchCats;
 
     </script>
-
 </body>
 </html>
